// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when all elements have expired grace periods 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when all elements have non-expired grace periods 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
      {
        "label": "oie.setup.remind.me.later",
        "options": {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when mix of expired grace period and non-expired grace periods 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "content": "oie.setup.required.now",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
      {
        "options": {
          "content": "oie.setup.required.soon",
          "dataSe": "authenticator-list-title",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.setup.required.soon.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list-grace-period",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when step is not skippable 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when step is skippable 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "content": "oie.setup.optional.short",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
      {
        "label": "oie.optional.authenticator.button.title",
        "options": {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elements when step is skippable and brandName is provided 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.enroll.subtitle.custom",
        },
        "type": "Description",
      },
      {
        "options": {
          "content": "oie.setup.optional.short",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
      {
        "label": "oie.optional.authenticator.button.title",
        "options": {
          "step": "skip",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should transform authenticator elemtns when no elements have grace periods 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Authenticator Selector Transformer Tests should treat authenticator elements as due now when badly formatted dates 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.select.authenticators.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.select.authenticators.enroll.subtitle",
        },
        "type": "Description",
      },
      {
        "options": {
          "content": "oie.setup.required.now",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "options": {
          "buttons": [
            {
              "label": "Email",
              "options": {
                "actionParams": {
                  "authenticator.id": "123abc",
                },
                "ariaLabel": "Select email.",
                "ctaLabel": "Select",
                "description": "Enroll in email authenticator",
                "key": "okta_email",
                "step": "select-authenticator-enroll",
                "type": "button",
              },
              "type": "AuthenticatorButton",
            },
          ],
          "dataSe": "authenticator-enroll-list",
        },
        "type": "AuthenticatorButtonList",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
